--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Une application météo classique",
   "main": "index.js",
   "scripts": {
-    "dev": "live-server --port=9999 --browser=chrome"
+    "dev": "live-server --port=8080 --browser=chrome",
+    "build": "webpack"
   },
   "keywords": [
     "meteo",
@@ -14,9 +15,12 @@
   "license": "MIT",
   "dependencies": {
     "bootstrap": "^4.3.1",
-    "jquery": "^3.3.1"
+    "jquery": "^3.3.1",
+    "ol": "^5.3.1"
   },
   "devDependencies": {
-    "live-server": "^1.2.1"
+    "live-server": "^1.2.1",
+    "webpack": "^4.29.6",
+    "webpack-cli": "^3.3.0"
   }
 }
