--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "Une application météo classique",
   "main": "index.js",
   "scripts": {
-    "dev": "live-server --port=8080 --browser=chrome",
-    "build": "webpack"
+    "dev": "webpack-dev-server"
   },
   "keywords": [
     "meteo",
@@ -19,8 +18,8 @@
     "ol": "^5.3.1"
   },
   "devDependencies": {
-    "live-server": "^1.2.1",
     "webpack": "^4.29.6",
-    "webpack-cli": "^3.3.0"
+    "webpack-cli": "^3.3.0",
+    "webpack-dev-server": "^3.2.1"
   }
 }
