--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "dependencies": {
     "bootstrap": "^4.3.1",
     "jquery": "^3.3.1",
-    "ol": "^5.3.1"
+    "ol": "^5.3.1",
+    "vanilla-router": "^1.2.7"
   },
   "devDependencies": {
     "webpack": "^4.29.6",
